--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Word Quiz</title>
  <style>
 /* Nhóm 1: CSS chung (Global Styles) */
+body {
+    font-family: arial;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+    background-color: white;
+    background-image: url("_anhnen3.jpg");
+    background-size: cover; /* hoặc background-size: 100% 100%; */
+    background-repeat: no-repeat; /* Đảm bảo ảnh không lặp */
+    height: 100vh; /* Chiều cao chiếm toàn màn hình */
+}
 .header-container {
     display: flex;
     align-items: center;
