--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     text-align: center;
     color: black;
     background-color: white;
-    background-image: url("_anhnen3.jpg");
+    background-image: url("./_anhnen3.jpg");
     background-size: cover; /* hoặc background-size: 100% 100%; */
     background-repeat: no-repeat; /* Đảm bảo ảnh không lặp */
     height: 100vh; /* Chiều cao chiếm toàn màn hình */
@@ -1003,7 +1003,7 @@ button3.read-complete-button:hover {
 <body>
    <!-- Nhóm 1: Header -->
 <div class="header-container">
-    <img src="_anhnenmoi.png" style="width: 100%; height: auto;">
+    <img src="./_anhnenmoi.png" style="width: 100%; height: auto;">
 </div>
 
 <!-- Nhóm 2: Màn hình chọn chế độ và khởi động -->
