--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     text-align: center;
     color: black;
     background-color: white;
-    background-image: url("./_anhnen3.jpg");
+    background-image: url("https://raw.githubusercontent.com/son502-mocnhien/hoctiengtrung/refs/heads/main/_anhnen3.jpg");
     background-size: cover; /* hoặc background-size: 100% 100%; */
     background-repeat: no-repeat; /* Đảm bảo ảnh không lặp */
     height: 100vh; /* Chiều cao chiếm toàn màn hình */
