--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@ button3.read-complete-button:hover {
 <body>
    <!-- Nhóm 1: Header -->
 <div class="header-container">
-    <img src="./_anhnenmoi.png" style="width: 100%; height: auto;">
+    <img src="https://raw.githubusercontent.com/son502-mocnhien/hoctiengtrung/refs/heads/main/_anhnenmoi.png" style="width: 100%; height: auto;">
 </div>
 
 <!-- Nhóm 2: Màn hình chọn chế độ và khởi động -->
