--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
  <style>
 /* Nhóm 1: CSS chung (Global Styles) */
 body {
-<<<<<<< HEAD
             font-family: arial;
             font-size: 20px;
             text-align: center;
@@ -23,18 +22,6 @@ body {
             min-height: 100vh;
             position: relative;
         }
-=======
-    font-family: arial;
-    font-size: 20px;
-    text-align: center;
-    color: black;
-    background-color: white;
-    background-image: url("https://raw.githubusercontent.com/son502-mocnhien/hoctiengtrung/refs/heads/main/_anhnen3.jpg");
-    background-size: cover; /* hoặc background-size: 100% 100%; */
-    background-repeat: no-repeat; /* Đảm bảo ảnh không lặp */
-    height: 100vh; /* Chiều cao chiếm toàn màn hình */
-}
->>>>>>> 864ec2a4c8a57d392a26ede4a739a89144cd7eb5
 .header-container {
     display: flex;
     align-items: center;
@@ -1025,7 +1012,7 @@ button3.read-complete-button:hover {
 <body>
    <!-- Nhóm 1: Header -->
 <div class="header-container">
-    <img src="https://raw.githubusercontent.com/son502-mocnhien/hoctiengtrung/refs/heads/main/_anhnenmoi.png" style="width: 100%; height: auto;">
+    <img src="./_anhnenmoi.png" style="width: 100%; height: auto;">
 </div>
 
 <!-- Nhóm 2: Màn hình chọn chế độ và khởi động -->
