--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
             text-align: center;
             color: black;
             background-color: white;
-            background-image: url("./_anhnen3.jpg");
+            background-image: url("./anhnen3.jpg");
             background-size: 480px auto;
             background-repeat: no-repeat;
             background-position: center;
