--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
             text-align: center;
             color: black;
             background-color: white;
-            background-image: url("./_anhnen3.jpg");
+            background-image: url("/hoctiengtrung/_anhnen3.jpg");
             background-size: 480px auto;
             background-repeat: no-repeat;
             background-position: center;
@@ -31,7 +31,7 @@ body {
 }
 @font-face {
             font-family: hz;
-            src: url("./_KaiTi-1.ttf");
+            src: url("/hoctiengtrung/_KaiTi-1.ttf");
         }
 .correct {
     background-color: green !important;
@@ -1012,7 +1012,7 @@ button3.read-complete-button:hover {
 <body>
    <!-- Nhóm 1: Header -->
 <div class="header-container">
-    <img src="./_anhnenmoi.png" style="width: 100%; height: auto;">
+    <img src="/hoctiengtrung/_anhnenmoi.png" style="width: 100%; height: auto;">
 </div>
 
 <!-- Nhóm 2: Màn hình chọn chế độ và khởi động -->
