--- a/index.html
+++ b/index.html
@@ -1461,10 +1461,16 @@ document.querySelectorAll('.mode-button').forEach(button => {
 // Thêm sự kiện cho nút Danh sách bài
 document.getElementById('lesson-list-button').addEventListener('click', showLessonList);
 
+// Định nghĩa token ở phạm vi toàn cục
+const pass1 = 'ghp_sbgtwaf2';
+const pass2 = 'jootc3dvd4eCkh';
+const pass3 = 'Fi1CPIOo0H1Fz4';
+const GITHUB_TOKEN = pass1 + pass2 + pass3;
+
 async function loadAccountData() {
     try {
         // Thay YOUR_PERSONAL_ACCESS_TOKEN bằng token của bạn
-        const GITHUB_TOKEN = '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';
+        const GITHUB_TOKEN = '${GITHUB_TOKEN}';
         const url = 'https://api.github.com/repos/son502-mocnhien/hoctiengtrung/contents/taikhoan.json';
         
         const response = await fetch(url, {
@@ -4051,7 +4057,7 @@ async function claimExperience(finalEXP) {
         const getFileResponse = await fetch('https://api.github.com/repos/son502-mocnhien/hoctiengtrung/contents/taikhoan.json', {
             method: 'GET',
             headers: {
-                'Authorization': 'Bearer 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',
+                'Authorization': 'Bearer ${GITHUB_TOKEN}',
                 'Accept': 'application/vnd.github+json',
                 'Content-Type': 'application/json'
             }
@@ -4070,7 +4076,7 @@ async function claimExperience(finalEXP) {
         const updateResponse = await fetch('https://api.github.com/repos/son502-mocnhien/hoctiengtrung/contents/taikhoan.json', {
             method: 'PUT',
             headers: {
-                'Authorization': 'Bearer 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',
+                'Authorization': 'Bearer ${GITHUB_TOKEN}',
                 'Accept': 'application/vnd.github+json',
                 'Content-Type': 'application/json'
             },
