--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@ margin-left: 50px; /* Dịch sang phải 10px */
 </div>
 <div id="auth-screen" class="auth-screen">
     <div class="auth-container">
-<img id="login-logo" src="_logo.jpg" alt="Login Banner" width="300" height="auto">
+<img id="login-logo" src="/hoctiengtrung/logo.jpg" alt="Login Banner" width="300" height="auto">
 <div class="welcome-text" style="color: white; text-align: center; font-size: 14px; margin-bottom: 10px; margin: 5px 0;">
     <p style="margin: 5px 0;">Chào mừng bạn đến với “Học Tiếng Trung Phồn Thể”!</p>
     <p style="margin: 5px 0;">Trải nghiệm cách học chữ Hán truyền thống kết hợp phương pháp học thông minh, trực quan.</p>
