--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,12 @@ margin-left: 50px; /* Dịch sang phải 10px */
     background-color: white;
     margin-bottom: 10px; /* Thêm 10px bên dưới */
 }
+.content-wrapper {
+    padding: 0 10px; /* Thêm padding trái và phải */
+    box-sizing: border-box;
+    max-width: 480px; /* Hẹp hơn 480px của body để tạo khoảng cách */
+    margin: 0 auto; /* Căn giữa div */
+}
 </style>
 </head>
 <body>
