--- a/index.html
+++ b/index.html
@@ -309,29 +309,40 @@ button2 {
     display: inline;
 }
 .dialogue-box.kieu-A {
-    background-color: rgba(255, 182, 193, 0.8);
+    background-color: rgba(255, 179, 186, 0.8); /* pastel pink */
     text-align: left;
     width: 100%;
     box-sizing: border-box;
 }
+
 .dialogue-box.kieu-B {
-    background-color: rgba(173, 216, 230, 0.8);
+    background-color: rgba(186, 225, 255, 0.8); /* pastel blue */
     text-align: left;
     width: 100%;
     box-sizing: border-box;
 }
+
 .dialogue-box.kieu-C {
-    background-color: rgba(173, 255, 47, 0.8);
+    background-color: rgba(255, 223, 186, 0.8); /* pastel orange */
     text-align: left;
     width: 100%;
     box-sizing: border-box;
 }
+
 .dialogue-box.kieu-D {
-    background-color: rgba(173, 255, 47, 0.8);
+    background-color: rgba(202, 255, 191, 0.8); /* pastel green */
     text-align: left;
     width: 100%;
     box-sizing: border-box;
 }
+
+.dialogue-box.kieu-K {
+    background-color: rgba(255, 255, 186, 0.8); /* pastel yellow */
+    text-align: left;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .dialogue-box.kieu-E {
     background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
@@ -4026,6 +4037,8 @@ earnedEXP -=2;
             dialogueBox.classList.add('kieu-C');
         } else if (question.kieu === 'D') {
             dialogueBox.classList.add('kieu-D');
+        } else if (question.kieu === 'K') {
+            dialogueBox.classList.add('kieu-K');
         } else if (question.kieu === 'E') {
             dialogueBox.classList.add('kieu-E');
         } else if (question.kieu === 'F') {
