--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,8 @@ margin-left: 50px; /* Dịch sang phải 10px */
     <iframe id="translateIframe" src=""></iframe>
 </div>
 <div id="related-hanzi-list"></div>
-
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
 <script>
 let earnedEXP = 0;
     let questionWord = "hanzi";
