--- a/index.html
+++ b/index.html
@@ -1853,8 +1853,6 @@ document.getElementById('login-button').addEventListener('click', async () => {
         document.querySelector('.header-container').style.display = 'block';
         document.getElementById('youtube-player').src = ''; // Dừng video
         errorElement.style.display = 'none';
-        // Gọi restoreGameState sau khi đăng nhập thành công
-        restoreGameState();
     } else {
         errorElement.textContent = 'Tên đăng nhập hoặc mật khẩu không đúng!';
         errorElement.style.display = 'block';
@@ -2229,17 +2227,14 @@ function handleWritingComplete() {
         showAnalysis();
         phanTichContainer.style.display = 'block';
         phanTichElement.style.display = 'block';
-        earnedEXP += 0; // 3 điểm cho Từ Vựng
-        document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-        saveGameState(); // Lưu trạng thái sau khi cập nhật earnedEXP
+       earnedEXP += 0; // 3 điểm cho Từ Vựng
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
     } else if (quizType === 'sentence') {
         earnedEXP += 0; // 10 điểm cho Mẫu Câu
-        document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-        saveGameState(); // Lưu trạng thái sau khi cập nhật earnedEXP
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
     } else if (quizType === 'dialogue') {
         earnedEXP += 0; // 10 điểm cho mỗi câu Hội Thoại
-        document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-        saveGameState(); // Lưu trạng thái sau khi cập nhật earnedEXP
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
     }
 
     const nextAction = () => {
@@ -2258,13 +2253,10 @@ function handleWritingComplete() {
 
         currentScrambleAnswer = '';
         currentCharIndex = 0;
-        saveGameState(); // Lưu trạng thái sau khi reset currentScrambleAnswer và currentCharIndex
 
         questionCount++;
-        saveGameState(); // Lưu trạng thái sau khi tăng questionCount
         if (questionCount < selectedHanzi.length) {
             currentQuestion = selectedHanzi[questionCount];
-            saveGameState(); // Lưu trạng thái sau khi cập nhật currentQuestion
             if (quizType === 'dialogue') {
                 updateDialogueContainer();
             }
@@ -2275,7 +2267,6 @@ function handleWritingComplete() {
             }
         } else {
             endGame();
-            saveGameState(); // Lưu trạng thái khi kết thúc trò chơi
         }
     };
 
@@ -3181,7 +3172,7 @@ if (quizType !== 'dialogue') {
 	
 }
 
-   function validateAnswer(button, selectedOption) {
+    function validateAnswer(button, selectedOption) {
     const feedbackMessage = document.getElementById('feedback');
     const pinyinElement = document.getElementById('pinyin');
     const kyhieuElement = document.getElementById('kyhieu');
@@ -3211,19 +3202,15 @@ if (quizType !== 'dialogue') {
         kyhieuElement.style.display = 'block';
         pinyinContainer.style.display = 'flex';
         if (quizType === 'vocabulary') {
-            earnedEXP += 1; // 1 điểm cho Từ Vựng
-            document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
+earnedEXP += 1; // 1 điểm cho Từ Vựng
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
             phanTichContainer.style.display = 'block';
             phanTichElement.style.display = 'block';
-
-            saveGameState(); // Đã có: Lưu trạng thái sau khi trả lời đúng (Từ Vựng)
         } else {
-            earnedEXP += 2; // 2 điểm cho Mẫu Câu
-            document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
+earnedEXP += 2; // 2 điểm cho Mẫu Câu
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
             phanTichContainer.style.display = 'none';
             phanTichElement.style.display = 'none';
-
-            saveGameState(); // Đã có: Lưu trạng thái sau khi trả lời đúng (Mẫu Câu)
         }
         meaningContainer.style.display = 'block';
         isHintVisible = true;
@@ -3242,7 +3229,6 @@ if (quizType !== 'dialogue') {
             answerInput.value = '';
             answerInput.disabled = false;
             questionCount++;
-            saveGameState(); // THÊM: Lưu trạng thái sau khi tăng questionCount
             if (questionCount < selectedHanzi.length) {
                 loadNewQuestion();
             } else {
@@ -3263,11 +3249,9 @@ if (quizType !== 'dialogue') {
                         reviewHanziList.appendChild(li);
                     });
                     reviewHanziDisplay.style.display = 'block';
-                    saveGameState(); // THÊM: Lưu trạng thái khi chuyển sang chế độ ôn tập
                     loadNewQuestion();
                 } else {
                     endGame();
-                    // Lưu ý: Nếu endGame() thay đổi trạng thái, hãy thêm saveGameState() trong endGame()
                 }
             }
         };
@@ -3286,22 +3270,21 @@ if (quizType !== 'dialogue') {
         feedbackMessage.innerText = 'Sai rồi, vui lòng chọn lại!';
         feedbackMessage.style.display = 'block';
         if (quizType === 'vocabulary' || quizType === 'sentence') {
-            if (!wrongHanzi.includes(currentQuestion.id)) {
-                wrongHanzi.push(currentQuestion.id);
-                const wrongHanziList = document.getElementById('wrong-hanzi-list');
-                const li = document.createElement('li');
-                li.textContent = `ID: ${currentQuestion.id}, Hanzi: ${currentQuestion.hanzi}`;
-                wrongHanziList.appendChild(li);
-            }
-            // Trừ điểm dựa trên loại quiz
-            if (quizType === 'vocabulary') {
-                earnedEXP -= 3;
-            } else if (quizType === 'sentence') {
-                earnedEXP -= 6;
-            }
-            document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-            saveGameState(); // THÊM: Lưu trạng thái sau khi trả lời sai
-        }
+    if (!wrongHanzi.includes(currentQuestion.id)) {
+        wrongHanzi.push(currentQuestion.id);
+        const wrongHanziList = document.getElementById('wrong-hanzi-list');
+        const li = document.createElement('li');
+        li.textContent = `ID: ${currentQuestion.id}, Hanzi: ${currentQuestion.hanzi}`;
+        wrongHanziList.appendChild(li);
+    }
+    // Trừ điểm dựa trên loại quiz
+    if (quizType === 'vocabulary') {
+        earnedEXP -= 3;
+    } else if (quizType === 'sentence') {
+        earnedEXP -=6;
+    }
+    document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
+}
         setTimeout(() => {
             if (button) button.classList.remove('incorrect');
             feedbackMessage.innerText = '';
@@ -3897,10 +3880,9 @@ function handleScrambleButtonClick(button, char) {
         currentScrambleAnswer += char;
         button.style.display = 'none';
 
-        // Award 1 EXP for each correct character
+// Award 1 EXP for each correct character
         earnedEXP += 1;
         document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-        saveGameState(); // Lưu trạng thái sau khi chọn đúng ký tự và cập nhật EXP
 
         if (quizType === 'sentence') {
             displayScrambleQuestion();
@@ -3936,12 +3918,11 @@ function handleScrambleButtonClick(button, char) {
                 phanTichContainer.style.display = 'block';
                 phanTichElement.style.display = 'block';
                 earnedEXP += 0; // 1 điểm cho Từ Vựng
-                document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
             } else if (quizType === 'sentence') {
-                earnedEXP += 0; // 5 điểm cho Mẫu Câu
-                document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
+               earnedEXP += 0; // 5 điểm cho Mẫu Câu
+document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
             }
-            saveGameState(); // Lưu trạng thái sau khi hoàn thành câu trả lời đúng
 
             const nextAction = () => {
                 document.getElementById('feedback').style.display = 'none';
@@ -3959,7 +3940,6 @@ function handleScrambleButtonClick(button, char) {
                 document.getElementById('inputPinyinDisplay').textContent = '';
 
                 questionCount++;
-                saveGameState(); // Lưu trạng thái sau khi tăng questionCount
                 if (questionCount < selectedHanzi.length) {
                     if (quizType === 'sentence' && isScrambleMode) {
                         startScrambleGame();
@@ -3986,12 +3966,11 @@ function handleScrambleButtonClick(button, char) {
         }
     } else {
         button.classList.add('incorrect');
-        // Trừ 2 điểm khi chọn sai ký tự trong chế độ Mẫu câu hoặc Hội thoại
+// Trừ 2 điểm khi chọn sai ký tự trong chế độ Mẫu câu hoặc Hội thoại
         if (quizType === 'sentence' || quizType === 'dialogue') {
-            earnedEXP -= 2;
+            earnedEXP -=2;
             document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
         }
-        saveGameState(); // Lưu trạng thái sau khi chọn sai ký tự và cập nhật EXP
         setTimeout(() => {
             button.classList.remove('incorrect');
         }, 200);
@@ -4000,13 +3979,12 @@ function handleScrambleButtonClick(button, char) {
 
     document.getElementById('back-button').addEventListener('click', function() {
         if (quizType === 'dialogue' && questionCount > 0) {
-        earnedEXP -=2;
+earnedEXP -=2;
             document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
             questionCount--;
             currentScrambleAnswer = '';
             loadNewQuestion();
         }
-saveGameState(); // Lưu trạng thái sau khi lùi câu
     });
 
     document.getElementById('next-button').addEventListener('click', function() {
@@ -4042,7 +4020,6 @@ saveGameState(); // Lưu trạng thái sau khi lùi câu
             endGame();
         }
     }
-saveGameState(); // Lưu trạng thái sau khi chuyển câu
 });
 
     function showHanziPopup(char) {
@@ -4576,66 +4553,64 @@ document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
     }
 });
 
-function resetGameModeSelection() {
+function returnToModeSelection() {
     // Ẩn popup
-    document.getElementById('hanzi-character-popup').style.display = 'none';
+    document.getElementById('hanzi-popup').style.display = 'none';
 
     // Ẩn game-container
-    document.getElementById('gameplay-container').style.display = 'none';
+    document.getElementById('game-container').style.display = 'none';
 
     // Hiển thị mode-selection-screen
     document.getElementById('mode-selection-screen').style.display = 'block';
 
-    // Reset game state
-    document.getElementById('quiz-type-options').style.display = 'none';
-    document.querySelectorAll('.mode-selection-button').forEach(btn => btn.classList.remove('active'));
-    questionCounter = 0;
-    incorrectHanziList = [];
-    selectedHanziCharacters = [];
-    reviewModeActive = false;
-    scrambleModeActive = false;
-    writingModeActive = false;
-    newWordModeActive = false;
-    scrambleCurrentAnswer = '';
-    currentCharacterIndex = 0;
-    document.getElementById('answerInputField').value = '';
-    document.getElementById('answerInputField').disabled = false;
-    document.getElementById('playSoundButton').disabled = false;
+    // Reset trạng thái trò chơi
+    document.getElementById('quiz-type-buttons').style.display = 'none';
+    document.querySelectorAll('.mode-button').forEach(btn => btn.classList.remove('active'));
+    questionCount = 0;
+    wrongHanzi = [];
+    selectedHanzi = [];
+    isReviewMode = false;
+    isScrambleMode = false;
+    isWritingMode = false;
+    isNewWordMode = false;
+    currentScrambleAnswer = '';
+    currentCharIndex = 0;
+    document.getElementById('answerInput').value = '';
+    document.getElementById('answerInput').disabled = false;
+    document.getElementById('playButton').disabled = false;
     document.getElementById('hintButton').disabled = false;
-    document.getElementById('incorrect-hanzi-display').innerHTML = '';
-    document.getElementById('review-hanzi-display').innerHTML = '';
-    document.getElementById('review-hanzi-section').style.display = 'none';
-    // Clear game state from localStorage
-    localStorage.removeItem('gameState');
+    document.getElementById('wrong-hanzi-list').innerHTML = '';
+    document.getElementById('review-hanzi-list').innerHTML = '';
+    document.getElementById('review-hanzi-display').style.display = 'none';
 
-    // Reset input fields
-    document.getElementById('lesson-input-field').value = '';
-    document.getElementById('word-count-input').value = '30';
-    document.getElementById('time-limit-input').value = '20';
-    document.getElementById('dialogue-number-input').value = '';
+    // Reset các trường input
+    document.getElementById('lesson-input').value = '';
+    document.getElementById('word-count').value = '30';
+    document.getElementById('time-limit').value = '20';
+    document.getElementById('dialogue-number').value = '';
 
-    // Close endgame popup
-    const endgamePopup = document.getElementById('endgame-popup-window');
-    if (endgamePopup) {
-        endgamePopup.style.display = 'none';
+// Đóng endgame-popup
+    const popup = document.getElementById('endgame-popup');
+    if (popup) {
+        popup.style.display = 'none';
     }
 
-    // Reset additional game variables
-    reviewModeActive = false;
-    questionCounter = 0;
-    incorrectHanziList = [];
-    currentReviewHanziList = [];
-    selectedHanziCharacters = [];
-    totalWordCount = 0;
+    // Reset các biến và trạng thái trò chơi (nếu cần)
+    isReviewMode = false;
+    questionCount = 0;
+    wrongHanzi = [];
+    currentReviewList = [];
+    selectedHanzi = [];
+    totalWords = 0;
 
-    // Switch to mode selection screen
-    document.getElementById('mode-selection-panel').style.display = 'block';
-    document.getElementById('quiz-game-container').style.display = 'none';
-    document.getElementById('review-hanzi-section').style.display = 'none';
+    // Chuyển về màn hình chọn chế độ
+    document.getElementById('mode-selection').style.display = 'block';
+    document.getElementById('quiz-container').style.display = 'none';
+    document.getElementById('review-hanzi-display').style.display = 'none';
 
-    // Re-enable buttons and inputs
-    document.getElementById('answerInputField').disabled = false;
-    document.getElementById('playSoundButton').disabled = false;
+    // Bật lại các nút và input nếu cần
+    document.getElementById('answerInput').disabled = false;
+    document.getElementById('playButton').disabled = false;
     document.getElementById('hintButton').disabled = false;
 }
 
@@ -4676,79 +4651,6 @@ document.getElementById('show-login').addEventListener('click', () => {
     document.getElementById('auth-error').style.display = 'none';
     playRandomYouTubeVideo(); // Phát video ngẫu nhiên
 });
-
-function saveGameState() {
-    const gameState = {
-        earnedEXP: earnedEXP,
-        currentQuestion: currentQuestion,
-        questionCount: questionCount,
-        selectedHanzi: selectedHanzi,
-        wrongHanzi: wrongHanzi,
-        isReviewMode: isReviewMode,
-        quizType: quizType,
-        selectedMode: selectedMode,
-        isWritingMode: isWritingMode,
-        isScrambleMode: isScrambleMode,
-        currentScrambleAnswer: currentScrambleAnswer,
-        currentCharIndex: currentCharIndex,
-        lessonInput: document.getElementById('lesson-input').value.trim(),
-        timeRemaining: timeRemaining,
-        randomMissionLesson: randomMissionLesson,
-        isNewWordMode: isNewWordMode
-    };
-    localStorage.setItem('gameState', JSON.stringify(gameState));
-}
-
-function restoreGameState() {
-    const savedState = localStorage.getItem('gameState');
-    if (savedState) {
-        const gameState = JSON.parse(savedState);
-        
-        // Khôi phục các biến trạng thái
-        earnedEXP = gameState.earnedEXP || 0;
-        currentQuestion = gameState.currentQuestion || null;
-        questionCount = gameState.questionCount || 0;
-        selectedHanzi = gameState.selectedHanzi || [];
-        wrongHanzi = gameState.wrongHanzi || [];
-        isReviewMode = gameState.isReviewMode || false;
-        quizType = gameState.quizType || 'vocabulary';
-        selectedMode = gameState.selectedMode || 'taiwanese';
-        isWritingMode = gameState.isWritingMode || false;
-        isScrambleMode = gameState.isScrambleMode || false;
-        currentScrambleAnswer = gameState.currentScrambleAnswer || '';
-        currentCharIndex = gameState.currentCharIndex || 0;
-        randomMissionLesson = gameState.randomMissionLesson || null;
-        isNewWordMode = gameState.isNewWordMode || false;
-
-        // Khôi phục giao diện
-        document.getElementById('earned-exp').textContent = `Điểm: ${earnedEXP}`;
-        document.getElementById('lesson-input').value = gameState.lessonInput || '';
-        timeRemaining = gameState.timeRemaining || timeLimit;
-
-        // Cập nhật giao diện dựa trên trạng thái
-        if (gameState.quizType && gameState.selectedMode) {
-            document.getElementById('mode-selection-screen').style.display = 'none';
-            document.getElementById('game-container').style.display = 'block';
-            
-            // Cập nhật trạng thái nút chế độ
-            document.querySelectorAll('.mode-button').forEach(btn => {
-                btn.classList.toggle('active', btn.getAttribute('data-mode') === selectedMode);
-            });
-
-            // Hiển thị lại giao diện trò chơi
-            updateStatus();
-            if (isWritingMode) {
-                startWritingMode();
-            } else if (isScrambleMode) {
-                startScrambleGame();
-            } else if (quizType === 'dialogue') {
-                updateDialogueContainer();
-            } else {
-                loadNewQuestion();
-            }
-        }
-    }
-}
 </script>
 </body>
 </html>
